fixed transition bug and made navbar spacing and font more appealing

--- a/src/components/Home/Animations/AnimateHeading.css
+++ b/src/components/Home/Animations/AnimateHeading.css
@@ -12,7 +12,7 @@
 
 .name-animation {
     transform: translateY(calc(-100vh - 1rem));
-    font-size: 6rem;
+    font-size: 6.25rem;
 }
 
 .title-animation {
@@ -27,11 +27,11 @@
 /* Media Queries for medium devices */
 @media screen and (max-width: 1024px) {
     .name-animation {
-        font-size: 4rem;
+        font-size: 4.5rem;
     }
 
     .title-animation {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     .NA-6, .TA-3, .TA-9, .TA-13 {
         padding-right: 0.75rem;
@@ -40,11 +40,11 @@
   /* Media Queries for small devices */
   @media screen and (max-width: 650px) {
     .name-animation {
-        font-size: 2.4rem;
+        font-size: 3.5rem;
     }
 
     .title-animation {
-        font-size: 1.2rem;
+        font-size: 1.25rem;
     }
     .NA-6, .TA-3, .TA-9, .TA-13 {
         padding-right: 0.5rem;
